--- a/config/database.yml
+++ b/config/database.yml
@@ -25,11 +25,12 @@ development:
   <<: *default
   database: myapp_development
   password: password
+  user: postgres
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: myapp
+
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,7 +59,8 @@ development:
 test:
   <<: *default
   database: myapp_test
-
+  password: password
+  user: postgres
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
